check_errors.txt
    Blocking waiting for file lock on build directory
warning: field `semantic_density` is never read
   --> tests\minimal_validation.rs:192:9
    |
189 |     struct MockChunk {
    |            --------- field in this struct
...
192 |         semantic_density: f64,
    |         ^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field `processing_time_ms` is never read
   --> tests\minimal_validation.rs:282:9
    |
279 |     struct MockProcessingResult {
    |            -------------------- field in this struct
...
282 |         processing_time_ms: u64,
    |         ^^^^^^^^^^^^^^^^^^

warning: fields `entity_precision` and `relationship_recall` are never read
   --> tests\minimal_validation.rs:331:9
    |
329 |     struct MockQualityMetrics {
    |            ------------------ fields in this struct
330 |         overall_quality: f64,
331 |         entity_precision: f64,
    |         ^^^^^^^^^^^^^^^^
332 |         relationship_recall: f64,
    |         ^^^^^^^^^^^^^^^^^^^

    Checking llmkg v0.1.0 (C:\code\LLMKG)
warning: `llmkg` (test "minimal_validation") generated 3 warnings
error[E0382]: borrow of moved value: `hops`
   --> tests\standalone_validation.rs:365:48
    |
347 |             let mut hops = Vec::new();
    |                 -------- move occurs because `hops` has type `Vec<String>`, which does not implement the `Copy` trait
...
350 |             for _ in 0..max_hops {
    |             -------------------- inside of this loop
...
364 |                             hops,
    |                             ---- value moved here
365 |                             confidence: 0.8 - (hops.len() as f64 * 0.1),
    |                                                ^^^^ value borrowed here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
364 |                             hops: hops.clone(),
    |                                 ++++++++++++++

error[E0277]: the size for values of type `str` cannot be known at compilation time
   --> tests\standalone_validation.rs:269:18
    |
269 |             for &entity in common_entities {
    |                  ^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `str`
    = note: all local variables must have a statically known size
    = help: unsized locals are gated as an unstable feature

error[E0277]: the trait bound `str: Pattern` is not satisfied
    --> tests\standalone_validation.rs:270:49
     |
270  |                 if text.to_lowercase().contains(entity) {
     |                                        -------- ^^^^^^ the trait `Pattern` is not implemented for `str`
     |                                        |
     |                                        required by a bound introduced by this call
     |
     = note: required for `str` to implement `Pattern`
note: required by a bound in `core::str::<impl str>::contains`
    --> C:\Users\hotra\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\str\mod.rs:1322:24
     |
1322 |     pub fn contains<P: Pattern>(&self, pat: P) -> bool {
     |                        ^^^^^^^ required by this bound in `core::str::<impl str>::contains`
help: consider borrowing here
     |
270  |                 if text.to_lowercase().contains(&entity) {
     |                                                 +

Some errors have detailed explanations: E0277, E0382.
For more information about an error, try `rustc --explain E0277`.
error[E0432]: unresolved import `llmkg::Error`
  --> tests\simple_link_test.rs:14:45
   |
14 |         use llmkg::{KnowledgeGraph, Result, Error};
   |                                             ^^^^^
   |                                             |
   |                                             no `Error` in the root
   |                                             help: a similar name exists in the module: `error`
   |
   = help: consider importing one of these items instead:
           crate::simple_link_tests::LogLevel::Error
           crate::simple_link_tests::monitoring::LogLevel::Error
           crate::simple_link_tests::monitoring::collectors::test_execution_tracker::TestStatus::Error
           std::error::Error
           std::fmt::Error
           std::fs::TryLockError::Error
           std::io::Error
           core::error::Error
           core::fmt::Error
           anyhow::Error
           axum::Error
           bincode::Error
           chrono::format::Item::Error
           clap::Error
           clap::error::Error
           dotenv::Error
           futures::io::Error
           futures_util::io::Error
           llmkg::LogLevel::Error
           llmkg::monitoring::LogLevel::Error
           llmkg::monitoring::collectors::test_execution_tracker::TestStatus::Error
           log::Level::Error
           log::LevelFilter::Error
           notify::Error
           proptest::string::Error
           rand::Error
           regex::Error
           reqwest::Error
           rusqlite::Error
           serde::de::Error
           serde::de::value::Error
           serde::ser::Error
           serde_json::Error
           syn::Error
           tokio::io::Error
           tokio::time::error::Error
           tower_http::classify::GrpcFailureClass::Error
           tower_http::classify::ServerErrorsFailureClass::Error
           tower_http::classify::StatusInRangeFailureClass::Error
           tracing_subscriber::reload::Error
           uuid::Error
           walkdir::Error
           warp::Error

warning: unused import: `llmkg::*`
 --> tests\simple_link_test.rs:3:9
  |
3 |     use llmkg::*;
  |         ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `KnowledgeGraph`
  --> tests\simple_link_test.rs:14:21
   |
14 |         use llmkg::{KnowledgeGraph, Result, Error};
   |                     ^^^^^^^^^^^^^^

error: could not compile `llmkg` (test "standalone_validation") due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
For more information about this error, try `rustc --explain E0432`.
warning: `llmkg` (test "simple_link_test") generated 2 warnings
error: could not compile `llmkg` (test "simple_link_test") due to 1 previous error; 2 warnings emitted
